# decker

./: .dockerignore  .ghci  .gitignore  .gitlab-ci.yml  .gitmodules  1  Dockerfile  Dockerfile-prebuilt  LICENSE  Setup.hs  brittany.yaml  changelog.md  codebook.toml  decker-meta.yaml  decker.cabal  decker.yaml  figure.html  figure.md  floskell.json  hie.yaml  index.md.generated  makefile  media-flow.dot  new-exam.yaml  package-lock.json  package.json  package.yaml  provisioning-meta.yaml  publish-meta.yaml  quiz-mockup.html  readme.md  slides.cabal  stack.yaml  test.md  version-meta.yaml  webpack.config.js
.decker/: .shake.database  external-programs.json  targets.yaml
.decker/code/: code-22c54af3.plantuml  code-2b57a2d2.dot  code-3e20419e.dot  code-cfc8262e.tex  code-f45f290c.dot
.github/workflows/: develop.yml  haskell.yml  jekyll-gh-pages.yml  release.yml
Docker/: Dockerfile  readme.md
Docker/DeckerServer/: Dockerfile  Readme.md
Docker/DeckerServer/servedFiles/: test-deck.md
Docker/StandaloneExample/: Dockerfile  Readme.md
annotations/: test.yaml
app/: Decker.hs  DeckerMonad.hs  decker.hs  dot.hs  examiner.hs  gnuplot.hs  handout.hs  include.hs  liveserver.hs  macros.hs  pandoc.hs  slideset-filter.hs  tester.hs
app/.shake/: .shake.database
attic/: Cache.hs  Dachdecker.hs  Decker.hs  Image2.hs  MarioCols2.hs  Media.hs  MediaTests.hs  Xml.hs  dachdecker-deck.md  help-page.md
doc/: decker-day-notes.md  dev-day-deck.md  dialog-deck.md  future-world.md  gui-architecture-page.md  haskell-resources-page.md  media-filter-report-page.md  media-filtering-workshop-2020-02.md  packaging-page.md  quiz-page.md  readme.md  release-policy-page.md  resource-handling-page.md  smart-image-urls-page.md
doc/static/: media-layout.css  media-layout.html  slide-layout.css  slide-layout.html
docker/: readme.md
exams/: raster-image-2-a-quest.yaml  raster-image-2-b-quest.yaml  raster-image-2-c-quest.yaml  replacement-transform-1-quest.yaml  replacement-transform-2-quest.yaml  replacement-transform-3-quest.yaml  replacement-transform-4-quest.yaml  replacement-transform-5-quest.yaml  replacement-transform-6-quest.yaml  student-meta-debug.yaml  student-test-data.yaml  supersampling-1-quest.yaml  supersampling-2-quest.yaml  supersampling-3-quest.yaml  supersampling-4-quest.yaml  supersampling-5-quest.yaml  test-exam.yaml
exams/templates/catalog/: fill-text.md  free-form.md  multiple-answers.md  multiple-choice.md  title-page.md
resource/: deck.html  exam.tex  ff-quest-catalog-template.md  ft-quest-catalog-template.md  handout.html  help-page.md  level-2.md  ma-quest-catalog-template.md  mc-quest-catalog-template.md  page.html  relative.md  test-question.md
resource/.shake/: .shake.database
resource/example/: decker.yaml  example-deck.md  example-meta.yaml  example-page.md  f-quest.yaml  ft-quest.yaml  index.md.generated  mc-quest.yaml  publish-meta.yaml  test-deck.md
resource/mono/: poll-client.js  poll-page.md
resource/support/: .gitignore  decker.css  decker.scss  handout.css  handout.scss  package.json  page.css  page.js  page.scss
resource/template/: deck.html  deck.md  default.yaml  ft-quest-catalog-template.md  handout.html  help-page.md  ma-quest-catalog-template.md  mc-quest-catalog-template.md  page.html  pandoc-reveal.html
resource/tester-example/: cross-product-geometry-test.yaml  cross-product-math-test.yaml
resource/tutorial/: 01-overview-deck.md  02-command-line-deck.md  03-header-deck.md  04-example-deck.md  05-quiz-deck.md  06-chart-deck.md  06-survey-deck.md  07-chart-deck.md  1-overview-deck.md  1-tutorial-overview-deck.md  2-command-line-deck.md  3-header-deck.md  4-example-deck.md  4-header-deck.md  5-quiz-deck.md  6-survey-deck.md  7-chart-deck.md  chart-meta.yaml  decker.yaml  example-page.md  tutorial-meta.yaml
resource/wburg/: readme.md
src/: Action.hs  CRC32.hs  Cache.hs  Common.hs  CompileTime.hs  Context.hs  Dachdecker.hs  Embed.hs  Exception.hs  External.hs  Filter.hs  Flags.hs  Format.hs  Git.hs  Glob.hs  Lens.hs  Macro.hs  Markdown.hs  Meta.hs  NewResources.hs  Output.hs  Path.hs  Pdf.hs  Project.hs  Quiz.hs  Render.hs  Resources.hs  Server.hs  Shake.hs  Sketch.hs  Slide.hs  Utilities.hs  Watch.hs  assignment.hs  common.hs  context.hs  embed.hs  example.hs  filter.hs  pandoc.hs  (+6 more)
src-support/: Chart.min.js  chalkboard.js  chart.js  classlist.js  d3.js  decker.css  decker.js  decker.scss  handout.js  handout.scss  math.js  menu.js  notes.js  page.js  page.scss  quiz.js  rplugins.js  three.js
src-support/fonts/: source-code-pro.css
test/: IncludeTests.hs  MediaTests.hs  MetaTest.hs  MetaTests.hs  ShortLinkTests.hs  SketchTests.hs  Spec.hs  WatchTests.hs  reload.html  student-mock-data.yaml  student-test-data.yaml
test/decks/: 3d-gnuplot.gnuplot  accessibility-deck.md  all-params.html  ar-deck.md  aria-deck.md  asm6502.xml  audience-poll-deck.md  author-page.md  background-iframe-deck.md  background-image-deck.md  background-video-deck.md  bezier.css  bezier.js  bibliography-deck.md  bibliography.bib  block-manip-deck.md  block-manip-manip.json  block-manip-times.json  captions-deck.md  chalkboard-deck.md  chart-deck.md  chart-meta.yaml  codapi.css  column-deck.md  columns.css  css-deck.md  css-tricks-deck.md  custom-quiz-deck.md  dachdecker-deck.md  detail-deck.md  detail-page.md  discord-deck.md  draft-deck.md  dummy.css  dupsub-deck.md  empty-deck.md  engine-2-deck.md  engine-auth-deck.md  engine-content.md  engine-deck.md  (+87 more)
test/environment/: .gitignore  Dockerfile  create.sh
test/exams/: test-exam.yaml
test/html/: mathjax-test.html
test/static/: anchor.js  es6-blue.js  es6.js  live-code-template.hs.txt  text-main.hs
tls/: decker-ssl.crt  decker-ssl.key
users-guide/: decker-users-guide.css  decker-users-guide.md  german-manual.md  german-presentation-cheat-sheet.html  makefile
users-guide/examples/: amo.off  basic-markdown-deck.md  decker.yaml  extended-markdown-deck.md  gradient.ggb  header-deck.md  image-deck.md  list-deck.md  makefile  media-deck.md  quote-deck.md  text-deck.md
website/: index.md
(+630 files in other folders)
