name:                decker
version:             0.4.0
synopsis:            All inclusive slide deck creation with pandoc.
description:         Please see README.md
homepage:            https://tramberend.beuth-hochschule.de/decker
license:             OtherLicense
license-file:        LICENSE
author:              Henrik Tramberend
maintainer:          tramberend@beuth-hochschule.de
copyright:           2017 Henrik Tramberend
category:            Tool
build-type:          Simple
cabal-version:       >=1.10

-- custom-setup
--   setup-depends:    base
--                   , Cabal
--                   , bytestring
--                   , directory
--                   , filepath

executable decker
  hs-source-dirs:      app, src
  main-is:             decker.hs
  other-modules:       Action
                     , Cache
                     , CRC32
                     , Macro
                     , Meta
                     , Watch
                     , Embed
                     , Context
                     , Utilities
                     , Filter
                     , Project
                     , Common
                     , Server
                     , Resources
                     , Render
                     , External
                     , Paths_decker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Glob
                     , HTTP
                     , aeson
                     , ansi-terminal
                     , array
                     , base64-bytestring
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , containers
                     , data-default
                     , directory
                     , extra
                     , file-embed
                     , filepath
                     , fsnotify
                     , hashable
                     , highlighting-kate
                     , http-conduit
                     , http-types
                     , monad-loops
                     , mtl
                     , multimap
                     , mustache
                     , network-uri
                     , pandoc
                     , pandoc-citeproc
                     , pandoc-types
                     , process
                     , pureMD5
                     , random
                     , scientific
                     , shake
                     , snap-core
                     , snap-server
                     , split
                     , temporary
                     , text
                     , time
                     , transformers
                     , unix
                     , unordered-containers
                     , utf8-string
                     , vector
                     , websockets
                     , websockets-snap
                     , yaml
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@cgmgit.beuth-hochschule.de:teaching/decker.git
