name:                slides
version:             0.1.0.0
synopsis:            Pandoc filters
description:         Please see README.md
homepage:            https://tramberend.beuth-hochschule.de
license:             BSD3
license-file:        LICENSE
author:              Henrik Tramberend
maintainer:          tramberend@beuth-hochschule.de
copyright:           2016 Henrik Tramberend
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pandoc, Test, Embed, Context, Utilities, Filter, Student
  build-depends:       base
                     , aeson
                     , pandoc-types
                     , pandoc-citeproc
                     , containers
                     , split
                     , data-default
                     , blaze-markup
                     , blaze-html
                     , monad-loops
                     , directory
                     , time
                     , shake
                     , process
                     , extra
                     , filepath
                     , Glob
                     , pandoc
                     , pureMD5
                     , yaml
                     , mustache
                     , unordered-containers
                     , text
                     , file-embed
                     , bytestring
                     , network-uri
                     , HTTP
                     , http-conduit
                     , http-types
                     , highlighting-kate
                     , multimap
  default-language:    Haskell2010

executable decker
  hs-source-dirs:      app
  main-is:             decker.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , slides
                     , shake
                     , Glob
                     , file-embed
                     , bytestring
                     , directory
                     , filepath
                     , pandoc
                     , yaml
                     , mustache
  default-language:    Haskell2010

executable tester
  hs-source-dirs:      app
  main-is:             tester.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , slides
                     , shake
                     , Glob
                     , bytestring
                     , directory
                     , filepath
                     , pandoc
                     , pandoc-types
                     , text
                     , yaml
                     , mustache
                     , highlighting-kate
                     , random
                     , random-shuffle
  default-language:    Haskell2010

-- executable include-pandoc-filter
--   hs-source-dirs:      app
--   main-is:             include.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , slides
--                      , pandoc-types
--   default-language:    Haskell2010

-- executable dot-pandoc-filter
--   hs-source-dirs:      app
--   main-is:             dot.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , slides
--                      , pandoc-types
--                      , base64-bytestring
--                      , bytestring
--                      , process
--                      , blaze-markup
--                      , blaze-html
--                      , split
--                      , pureMD5
--   default-language:    Haskell2010

-- executable gnuplot-pandoc-filter
--   hs-source-dirs:      app
--   main-is:             Gnuplot.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , slides
--                      , pandoc-types
--                      , base64-bytestring
--                      , bytestring
--                      , process
--                      , blaze-markup
--                      , blaze-html
--                      , split
--                      , pureMD5
--                      , directory
--   default-language:    Haskell2010

-- executable macros-pandoc-filter
--   hs-source-dirs:      app
--   main-is:             macros.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , slides
--                      , pandoc-types
--                      , containers
--                      , split
--                      , data-default
--                      , blaze-markup
--                      , blaze-html
--   default-language:    Haskell2010

-- executable slideset-pandoc-filter
--   hs-source-dirs:      app
--   main-is:             slideset-filter.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , slides
--                      , pandoc-types
--                      , containers
--                      , split
--                      , data-default
--   default-language:    Haskell2010

-- executable handout-pandoc-filter
--   hs-source-dirs:      app
--   main-is:             handout.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , slides
--                      , pandoc-types
--                      , containers
--                      , split
--                      , data-default
--   default-language:    Haskell2010

test-suite slides-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slides
                     , hspec
                     , filepath
                     , pandoc
                     , Glob
                     , yaml
                     , containers
                     , unordered-containers
                     , text
                     , neat-interpolation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/slides
